kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selecoes
  # namespace será definido pelo kustomization.yaml
  labels:
    app: selecoes
spec:
  selector:
    matchLabels:
      app: selecoes
  replicas: 1
  template:
    metadata:
      labels:
        app: selecoes
    spec:
      containers:
      - name: selecoes
        image: dti-registro.unilab.edu.br/unilab/selecoes:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: selecoes
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        - name: env-volume
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: localtime
        hostPath:
          path: /usr/share/zoneinfo/America/Fortaleza
          type: File
      - name: timezone
        hostPath:
          path: /etc/timezone
          type: File
      - name: env-volume
        configMap:
          name: selecoes-config
          items:
            - key: .env
              path: .env
      imagePullSecrets:
      - name: regcred
