kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selecoes
spec:
  selector:
    app: selecoes
  type: NodePort
  ports:
    - name: selecoes
      protocol: TCP
      port: 80
      targetPort: 80
